<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout_enter_pincode"
    android:background="#1B1732"
    android:focusable="true"
    android:clickable="true"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/back_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="0dp">

        <ImageView
            android:id="@+id/iv_icon_back"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/icon_back"
            android:contentDescription="@string/back_button"
            android:layout_marginStart="5dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:id="@+id/tv_enter_your_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_pin"
                android:layout_marginBottom="@dimen/_20sdp"
                android:textAlignment="center" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content" >
                <androidx.appcompat.widget.AppCompatEditText
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/et_password"
                    android:background="@drawable/shape_warning"
                    android:fontFamily="@font/arsenal_bold"
                    android:paddingLeft="20dp"
                    android:paddingTop="2dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="2dp"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginHorizontal="@dimen/_70sdp"
                    android:minWidth="200dp"
                    android:cursorVisible="false"
                    android:maxLength="4"
                    android:inputType="numberPassword"
                    android:textAlignment="center"
                    android:letterSpacing="0.2" />
                <ImageView
                    android:id="@+id/my_image_view"
                    android:tag="show_hide_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginHorizontal="@dimen/_80sdp"
                    android:background="@drawable/ic_show"
                    />

            </RelativeLayout>

            <TextView
                android:textSize="13sp"
                android:textColor="#ff0000"
                android:layout_gravity="center_horizontal"
                android:tag="tv_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/keypad_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_30sdp"
                android:background="@drawable/bg_circle"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:tag="ll_1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lufga_bold"
                    android:text="@string/_1"
                    android:textColor="@android:color/white"
                    android:textSize="28sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_30sdp"
                android:background="@drawable/bg_circle"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:tag="ll_2"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lufga_bold"
                    android:text="@string/_2"
                    android:textColor="@android:color/white"
                    android:textSize="28sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_circle"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:tag="ll_3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lufga_bold"
                    android:text="@string/_3"
                    android:textColor="@android:color/white"

                    android:textSize="28sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:baselineAligned="false"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_30sdp"
                android:background="@drawable/bg_circle"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:tag="ll_4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lufga_bold"
                    android:text="@string/_4"
                    android:textColor="@android:color/white"
                    android:textSize="28sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_30sdp"
                android:background="@drawable/bg_circle"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:tag="ll_5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lufga_bold"
                    android:text="@string/_5"
                    android:textColor="@android:color/white"
                    android:textSize="28sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_circle"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:tag="ll_6">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lufga_bold"
                    android:text="@string/_6"
                    android:textColor="@android:color/white"
                    android:textSize="28sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:baselineAligned="false"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_30sdp"
                android:background="@drawable/bg_circle"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:tag="ll_7">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lufga_bold"
                    android:text="@string/_7"
                    android:textColor="@android:color/white"

                    android:textSize="28sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_30sdp"
                android:background="@drawable/bg_circle"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:tag="ll_8">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lufga_bold"
                    android:text="@string/_8"
                    android:textColor="@android:color/white"

                    android:textSize="28sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_circle"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:tag="ll_9">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lufga_bold"
                    android:text="@string/_9"
                    android:textColor="@android:color/white"
                    android:textSize="28sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_30sdp"
                android:background="@drawable/bg_circle"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:tag="ll_clear_character">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:src="@drawable/icon_clear_character" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_30sdp"
                android:background="@drawable/bg_circle"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:tag="ll_0">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lufga_bold"
                    android:text="@string/_0"
                    android:textColor="@android:color/white"

                    android:textSize="28sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_circle"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:tag="ll_clear_all_text">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_done"
                    android:tag="btn_confirm_pin"
                    android:textColor="@color/color_success_stroke"
                    android:visibility="visible" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
